[gd_scene load_steps=3 format=2]

[ext_resource path="res://advisorMessage.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

[node name="advisorMessage" type="Spatial"]
script = ExtResource( 1 )
expressions = [ "Neutral", "Angry", "Worried" ]

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
